HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementPredicateImpure/Source/Main.uv
//! Rejected refinement specimen for an impure refinement predicate.

public procedure impureRefinementPredicateValue() -> bool {
    return true
}

public type ImpureRefinement = i32 |: { impureRefinementPredicateValue() }
